--- a/index.html
+++ b/index.html
@@ -7,5 +7,54 @@
 <body>
 
 </body>
-<script src="//repl.it/embed/DkMO/0.js"></script>
+<script>
+    (function() {
+  /*eslint semi-spacing:0*/
+  /*eslint no-var:0*/
+  var url ="//repl.it/embed/DkMO/0.js";
+
+  var script = document.currentScript ||
+        document.querySelector('script[src="' + url + '"]');
+
+  if (!script) {
+    throw new Error('Could not find script tag');
+  }
+
+  var iframe = document.createElement('iframe');
+  iframe.setAttribute('src', url.replace(/\.js$/, ''));
+  iframe.setAttribute('frameborder', '0');
+  iframe.setAttribute(
+    'allow-forms allow-pointer-lock allow-popups ' +
+      'allow-same-origin allow-scripts'
+  );
+  iframe.setAttribute('width', '100%');
+
+  // ios safari bullshit
+  iframe.setAttribute(
+    'style',
+    'width: 1px;max-width: 100%;min-width: 100%;overflow: hidden;'
+  );
+  script.parentNode.appendChild(iframe);
+
+  var frameId = 'repl.it-embed' + Math.ceil(Math.random() * 999999999) + 1;
+  iframe.addEventListener('load', function() {
+    iframe.contentWindow.postMessage(frameId, '*');
+  });
+
+  window.addEventListener('message', function(e) {
+    var msg;
+    try {
+      msg = JSON.parse(e.data);
+    } catch (err) {
+      return;
+    }
+
+    if (msg.frameId !== frameId) {
+      return;
+    }
+
+    iframe.setAttribute('height', msg.height);
+  }, addEventListener);
+})();
+    </script>
 </html>
