--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   iframe.setAttribute('src', url.replace(/\.js$/, ''));
   iframe.setAttribute('frameborder', '0');
   iframe.setAttribute(
+    'class',
     'allow-forms allow-pointer-lock allow-popups ' +
       'allow-same-origin allow-scripts'
   );
