--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   iframe.setAttribute('frameborder', '0');
   iframe.setAttribute(
     'sandbox',
-    'allow-forms allow-pointer-lock allow-popups ' +
+    'allow-forms allow-pointer-lock allow-popups allow-modals' +
       'allow-same-origin allow-scripts'
   );
   iframe.setAttribute('width', '100%');
